--- a/index.html
+++ b/index.html
@@ -185,24 +185,24 @@
             .container {
                 box-shadow: none; /* Remove shadows for print */
                 border: none; /* Remove borders for print */
-                padding: 10mm; /* More compact margins for print */
+                padding: 5mm; /* Significantly reduced padding for print */
                 max-width: 100%; /* Use full available width */
                 width: 100%;
                 display: block; /* Allow natural flow */
             }
             h1.main-title {
-                font-size: 1.8rem; /* Smaller for print */
-                margin-bottom: 8mm; /* More compact margin */
+                font-size: 1.6rem; /* Significantly smaller for print */
+                margin-bottom: 5mm; /* Significantly reduced margin */
             }
             .subtitle {
-                font-size: 0.9rem; /* Smaller for print */
-                margin-bottom: 10mm; /* More compact margin */
+                font-size: 0.8rem; /* Significantly smaller for print */
+                margin-bottom: 8mm; /* Significantly reduced margin */
             }
             ul {
-                margin-bottom: 5mm; /* More compact margin */
+                margin-bottom: 3mm; /* Significantly reduced margin */
             }
             li {
-                margin-bottom: 8mm; /* More compact margin */
+                margin-bottom: 5mm; /* Significantly reduced margin */
                 page-break-inside: avoid; /* Crucial: prevent content within a li from breaking */
             }
             /* Force a page break after the 'Packaging & Presentation' section */
@@ -210,47 +210,47 @@
                 page-break-after: always;
             }
             li strong {
-                font-size: 1.05em; /* Smaller for print */
-                margin-bottom: 4mm; /* More compact margin */
+                font-size: 0.9em; /* Significantly smaller for print */
+                margin-bottom: 3mm; /* Significantly reduced margin */
                 border-bottom: none;
             }
             ul li ul {
-                padding: 4mm 4mm 4mm 8mm; /* More compact padding */
-                margin-top: 4mm; /* More compact margin */
+                padding: 3mm 3mm 3mm 6mm; /* Significantly reduced padding for print */
+                margin-top: 3mm; /* Significantly reduced margin */
                 background-color: #FDFBF8;
                 border: 1px solid #F8E6DD;
             }
             ul li ul li {
-                font-size: 0.8em; /* Smaller for print */
-                margin-bottom: 2mm; /* More compact margin */
+                font-size: 0.75em; /* Significantly smaller for print */
+                margin-bottom: 1.5mm; /* Significantly reduced margin */
             }
             ul li ul li:last-child {
                 margin-bottom: 0;
             }
             .section-divider {
-                margin: 10mm 0; /* More compact margin */
+                margin: 8mm 0; /* Significantly reduced margin */
                 page-break-before: auto;
                 page-break-after: auto;
             }
             .packaging-option {
-                padding: 8mm; /* More compact padding */
-                margin-bottom: 8mm; /* More compact margin */
+                padding: 6mm; /* Significantly reduced padding for print */
+                margin-bottom: 6mm; /* Significantly reduced margin */
                 page-break-inside: avoid; /* Ensure packaging options stay together */
             }
             .packaging-option strong {
-                font-size: 0.9em; /* Smaller for print */
-                margin-bottom: 4mm; /* More compact margin */
+                font-size: 0.8em; /* Significantly smaller for print */
+                margin-bottom: 3mm; /* Significantly reduced margin */
             }
             .packaging-option p {
-                margin-bottom: 4mm; /* More compact margin */
+                margin-bottom: 3mm; /* Significantly reduced margin */
             }
             .packaging-images {
-                gap: 4mm; /* More compact gap */
-                margin-top: 4mm; /* More compact margin */
+                gap: 3mm; /* Significantly reduced gap for print */
+                margin-top: 3mm; /* Significantly reduced margin */
             }
             .packaging-images img {
-                flex-basis: 70px; /* Smaller for print */
-                max-width: 100px; /* Smaller for print */
+                flex-basis: 60px; /* Significantly smaller for print */
+                max-width: 90px; /* Significantly smaller for print */
                 box-shadow: none;
             }
             .print-button {
